traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:4: error: not found: value isFacinWall
    if (isFacinWall() && (getDirection() == Direction.EST)){
        ^Snake:10: error: not found: value isFacinWall
    if (isFacinWall() && (getDirection() == Direction.OUEST)){
        ^Snake:36: error: Unit does not take parameters
    right()()
           ^