traversal.snake.Snake.scala.code
override def run() {
  
  def WallBuggle(): Boolean={
    if (isFacinWall() && (getDirection() == Direction.EST)){
      left()
      if (isFacingWall()==true){
        return(true)
      }
    }
    if (isFacinWall() && (getDirection() == Direction.OUEST)){
      right()
      if (isFacingWall()==true){
        return(true)
      }
    }
    return(false)
    
  }
  
  
  
def chemin(){
  brushDown()
  while(!WallBuggle){
    for(k<-1 to 6){
      forward()
    }
    left()
    forward()
    left()
    for(k<-1 to 6){
      forward()
    }
    right()
    forward()
    right()()
   }
  }
}